@@ -2,7 +2,7 @@ dnl	This file is an input file used by the GNU "autoconf" program to
 dnl	generate the file "configure", which is run to configure the
 dnl	Makefile in this directory.
 AC_INIT(../src/tcljava/tcl/lang/InternalRep.java)
-# RCS: @(#) $Id: configure.in,v 1.6 1999/01/08 00:05:11 hylands Exp $
+# RCS: @(#) $Id: configure.in,v 1.7 1999/01/15 03:06:55 hylands Exp $
 
 
 #--------------------------------------------------------------------
@@ -349,7 +349,7 @@ fi
 TCLJAVA_VERSION=1.1
 TCLJAVA_MAJOR_VERSION=1
 TCLJAVA_MINOR_VERSION=1
-TCLJAVA_PATCHLEVEL=b1
+TCLJAVA_PATCHLEVEL=
 
 #--------------------------------------------------------------------
 #	If the TCLJAVA variable equals tclblend then we need to
